# NTEP-Expanded-Exposition

./: .gitignore  README.md  citation.bib  metadata.json  pyproject.toml
.github/workflows/: Publish-Python-Package-to-PyPI.yml
examples/: document_pipeline.py
scripts/: infer.py  train.py
src/ntep/: __init__.py
src/ntep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ntep/core/: dependency.py  tool.py
src/ntep/inference/: decoder.py
src/ntep/math/: geometry.py
