
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntep"
version = "0.1.0"
authors = [
  { name="J. Roberto Jiménez ", email="tijuanapaint@gmail.com" },
]
description = "Neuro‑symbolic Tool Composition via Spherical Embeddings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "sentence-transformers",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/deskiziarecords/ntep-expanded-exposition"
"Bug Tracker" = "https://github.com/deskiziarecords/ntep-expanded-exposition/issues"
