
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntep"
version = "0.1.0"
authors = [
  { name="J. Roberto Jiménez ", email="tijuanapaint@gmail.com" },
]
description = "Neuro‑symbolic Tool Composition via Spherical Embeddings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "sentence-transformers",
    "tqdm",
]

keywords = [
    "artificial-intelligence",
    "machine-learning",
    "neuro-symbolic",
    "tool-use",
    "tool-chaining",
    "embeddings",
    "ai-safety",
    "formal-methods",
    "agents",
    "correctness",
    "geometry",
    "representation-learning"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/deskiziarecords/NTEP-Expanded-Exposition"
"Bug Tracker" = "https://github.com/deskiziarecords/NTEP-Expanded-Exposition/issues"

